feat: Add ECS services to Terraform and update GitHub Actions
- Add ECS services for api-users, api-orders, api-products with public IP access
- Remove ALB configuration for simplified deployment
- Update GitHub Actions to only build and push Docker images to ECR
- ECS services are now managed by Terraform, not GitHub Actions
- Simplified networking using default subnets and public IP assignment

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -47,13 +47,8 @@ jobs:
         # Export image URI for deployment
         echo "IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA" >> $GITHUB_ENV
 
-    - name: Update ECS service
-      run: |
-        aws ecs update-service \
-          --cluster micro-frontend-cluster \
-          --service api-users-service \
-          --force-new-deployment \
-          --region ${{ env.AWS_REGION }}
+    # Note: ECS services are managed by Terraform
+    # Images are built and pushed to ECR for deployment
 
   deploy-api-orders:
     runs-on: ubuntu-latest
@@ -86,13 +81,8 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-    - name: Update ECS service
-      run: |
-        aws ecs update-service \
-          --cluster micro-frontend-cluster \
-          --service api-orders-service \
-          --force-new-deployment \
-          --region ${{ env.AWS_REGION }}
+    # Note: ECS services are managed by Terraform
+    # Images are built and pushed to ECR for deployment
 
   deploy-api-products:
     runs-on: ubuntu-latest
@@ -125,10 +115,5 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-    - name: Update ECS service
-      run: |
-        aws ecs update-service \
-          --cluster micro-frontend-cluster \
-          --service api-products-service \
-          --force-new-deployment \
-          --region ${{ env.AWS_REGION }}
+    # Note: ECS services are managed by Terraform
+    # Images are built and pushed to ECR for deployment
