fix: Add API build steps to GitHub Actions workflow
- Add 'Build API application' step to each job
- Build APIs with Nx before creating Docker images
- Ensures dist directories exist for Docker COPY commands
- Fixes deployment pipeline for all backend APIs

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -32,6 +32,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
+    - name: Build API application
+      run: |
+        npm ci
+        npx nx build api-users --configuration=production
+
     - name: Build and push Docker image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -69,6 +74,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
+    - name: Build API application
+      run: |
+        npm ci
+        npx nx build api-orders --configuration=production
+
     - name: Build and push Docker image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -102,6 +112,11 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Build API application
+      run: |
+        npm ci
+        npx nx build api-products --configuration=production
 
     - name: Build and push Docker image
       env:
