--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@swc/jest": "~0.2.38",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
@@ -77,6 +78,7 @@
     "vitest": "^3.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
